--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "server": "tsx src/index.ts",
-    "build": "tsc",
+    "build": "vite build",
     "start": "node dist/index.js",
     "clean": "rm -rf dist"
   },
@@ -17,8 +17,10 @@
     "puppeteer": "^24.17.0"
   },
   "devDependencies": {
+    "@hono/vite-build": "^1.7.0",
     "@types/node": "^20.11.17",
     "tsx": "^4.7.1",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vite": "^7.1.5"
   }
 }
